<resources>
    <string name="app_name">PMDProyectoPlantas</string>
    <string name="navigation_drawer_open">Abrir cajón de navegación</string>
    <string name="navigation_drawer_close">Cerrar cajón de navegación</string>
    <string name="nav_header_title">PlantApp</string>
    <string name="nav_header_subtitle">Diario de plantas</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuraciones</string>

    <string name="campo_en_blanco">¡Campo vacío!</string>
    <string name="si">Sí</string>
    <string name="no">No</string>

    <string name="drawer_my_plants">Mis plantas</string>
    <string name="drawer_events">Eventos</string>
    <string name="drawer_alarms">Alarmas</string>
    <string name="drawer_notifications">Notificaciones</string>
    <string name="drawer_help">Ayuda</string>
    <string name="drawer_settings">Configuración</string>
    <string name="drawer_log_out">Cerrar sesión</string>

    <!-- LOGIN -->
    <string name="title_activity_login">PlantApp</string>
    <string name="activity_login_auth_fail">Autenticación fallida</string>
    <string name="activity_login_task_fail">Actividad asíncrona no terminada</string>
    <string name="activity_login_invalid_email">Correo inválido</string>
    <string name="activity_login_invalid_password">Contraseña inválida</string>
    <string name="activity_main_registro_banner">¿No está registrado? Haga click aquí</string>
    <string name="activity_main_registro_fallido">Registro fallido</string>
    <!-- Facebook Auth -->
    <string name="facebook_app_id">506577483162556</string>
    <string name="fb_login_protocol_scheme">fb506577483162556</string>
    <!-- FIREBASE -->
    <string name="prompt_username">Nombre de usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_google">Entrar con Google</string>

    <string name="error_invalid_username">Nombre de usuario inválido</string>
    <string name="error_invalid_password">¡Constraseña muy corta!</string>
    <string name="error_incorrect_password">Error en contraseña</string>
    <string name="error_field_required">Campos requeridos</string>

    <!-- PLANTS-->
    <string name="activity_plants_tab_plantas">Plantas</string>
    <string name="activity_plants_tab_grupos">Grupos</string>
    <string name="activity_plants_toolbar_titulo">Mis Plantas</string>
    <string name="activity_plants_search_hint">Buscar</string>

    <!--Activity add plants-->
    <string name="activity_add_plant_fotografia">Fotografía</string>
    <string name="activity_add_plant_nombre">Nombre</string>
    <string name="activity_add_plant_especie">Especie</string>
    <string name="activity_add_plant_cuidados">Cuidados</string>
    <string name="activity_add_plant_guardar">Guardar</string>
    <string name="activity_add_plant_canelar">Cancelar</string>
    <string name="activity_add_plant_titulo">Agregar una planta</string>
    <string name="activity_add_plant_dialog_message">No ha seleccionado ninguna imagen,
    ¿desea continuar sin una imagen para esta planta?</string>

    <string name="hello_blank_fragment">Fragmento en blanco</string>
    <string name="title_activity_plant_detail">ActivityPlantDetail</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <!-- Activity Add Events-->
    <string name="activity_add_event_title">Agregar Evento</string>
    <string name="activity_add_event_photo">Fotografía</string>
    <string name="activity_add_event_name">Nombre</string>
    <string name="activity_add_event_notes">Notas</string>
    <string name="activity_add_event_date">Tu fecha aquí</string>
    <string name="activity_add_event_add_date">Cambiar fecha</string>

    <string name="activity_add_event_button_ok">OK</string>
    <string name="activity_add_event_button_cancel">Cancelar</string>

    <string-array name="event_types">
        <item>Plantación</item>
        <item>Floreamientos</item>
        <item>Frutos</item>
        <item>Registro del día</item>
        <item>Fertilización</item>
        <item>Transferencia</item>
        <item>Otro</item>
    </string-array>


</resources>
