<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_plants"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/drawer_my_plants" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/drawer_events" />
        <item
            android:id="@+id/nav_alarms"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/drawer_alarms" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/drawer_notifications" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/drawer_help" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/drawer_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/drawer_log_out" />
        </menu>
    </item>

</menu>
